some additional small updates

--- a/bodsiart website/index.html
+++ b/bodsiart website/index.html
@@ -38,15 +38,22 @@
 			        <h4><span>Learn More About Us</span></h4>
 		        </div>
 		        <div>
-		        	<p>Is Rolfing right for you?</p>
+		        	<h3>Is Rolfing right for you?</h3>
 		        </div>
 		        <img src = "images/menu_arrow_down.png" class = "block" alt = "Delicious Rolfing">
-		        <img src = "images/what_is_rolfing_circle_illustration.png" alt = "Slouchers Circle">
-		        <img src = "images/read_more_side_arrow.png" alt = "Read More Arrow">
-		        <img src = "images/what_we_do_circle_illustration.png" alt = "Rock Stack Circle">
-				<img src = "images/about_garrett_circle_illustration.png" alt = "Sprout Circle">
-				<img src = "images/brown_upside_down_tree.png" alt = "Down Tree">
-		        <img src = "images/green_tree.png" alt = "Up Tree">
+		        <div>
+		        	<h4>Is rolfing right for you?</h4>
+		        	<img src = "images/read_more_side_arrow.png" alt = "Read More Arrow">
+		        </div>
+			        
+		        <div>
+			        <img src = "images/what_is_rolfing_circle_illustration.png" alt = "Slouchers Circle">
+			        <img src = "images/what_we_do_circle_illustration.png" alt = "Rock Stack Circle">
+					<img src = "images/about_garrett_circle_illustration.png" alt = "Sprout Circle">
+				</div>
+				<img src = "images/green_tree.png" alt = "Up Tree" class="fL">
+    			<div id ="border" class = "cf" "fL"></div>
+    			<img src = "images/brown_upside_down_tree.png" alt = "Down Tree" class="fR">
 		        <img src = "images/big_quotation_testimonial.png" class = "block" alt = "Delicious Rolfing"><!--make sure to use alt tags on images that describe them for screen readers so our sites stand up to Web Content Accessibility Standards-->
 		    </div>
 		    <footer>
