some additional small updates

--- a/bodsiart website/index.html
+++ b/bodsiart website/index.html
@@ -45,7 +45,6 @@
 		        	<h4>Is rolfing right for you?</h4>
 		        	<img src = "images/read_more_side_arrow.png" alt = "Read More Arrow">
 		        </div>
-			        
 		        <div>
 			        <img src = "images/what_is_rolfing_circle_illustration.png" alt = "Slouchers Circle">
 			        <img src = "images/what_we_do_circle_illustration.png" alt = "Rock Stack Circle">
@@ -58,8 +57,13 @@
 		    </div>
 		    <footer>
 		    	<div>
-		    		<h3>Call for a Free Phone Consultation</h3>
-		    		<img src = "images/vertical_green_spine_footer.png" alt = "Vertical Rock Spine">
+		    		<h3 class="inline" id="footertxt">Call for a Free Phone Consultation</h3>
+		    		<img src = "images/vertical_green_spine_footer.png" alt = "Vertical Rock Spine" class="inline" id="footerspine">
+		    	</div>
+		    	<div class="address inline">
+	    			<h3>303-829-0611</h3>
+		    		<h3>garrett@bodsiart.com</h3>
+		    		<h3>1777 Grape Ave. Boulder, CO 80304</h3>
 		    	</div>
 		    </footer>
 		</body>
